--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-* { 
-    outline: 1px dotted crimson;
+* {
+    /*outline: 1px dotted red;*/
+}
+
+.course {
+    padding: 10px;
+    margin: 10px;
+    background-color: antiquewhite;
 }
